--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --output-hashing=none",
+    "package":
+      "cat dist/elements-demo/{runtime-es5,polyfills-es5,scripts,main-es5}.js | gzip > elements.js.gz",
+    "serve": "http-server --gzip",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -15,13 +18,15 @@
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
+    "@angular/elements": "^8.0.3",
     "@angular/forms": "~8.0.1",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "document-register-element": "^1.7.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
