--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --output-hashing=none",
-    "package":
-      "cat dist/elements-demo/{runtime-es5,polyfills-es5,scripts,main-es5}.js | gzip > elements.js.gz",
+    "build": "ng build --prod --single-bundle --output-hashing=none",
+    "package": "cat dist/elements-demo/{scripts,main}.js | gzip > elements.js.gz",
     "serve": "http-server --gzip",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,10 +22,11 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "document-register-element": "^1.7.2",
+    "ngx-build-plus": "^8.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "document-register-element": "^1.7.2"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
