ADDED: watcher for develop webcomponent much better ;)
welcome component template

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --single-bundle --output-hashing=none",
-    "package": "cat dist/elements-demo/{scripts,main}.js | gzip > elements.js.gz",
-    "serve": "http-server --gzip",
+    "watch": "ng build --single-bundle --aot --sourceMap=true --watch",
+    "build-prod": "ng build --prod --single-bundle --output-hashing=none",
+    "package-es5": "cat dist/elements-demo/{scripts,main-es5}.js | gzip > elements-es5.js.gz",
+    "package-es2015": "cat dist/elements-demo/{scripts,main-es2015}.js | gzip > elements-es2015.js.gz",
+    "create-bundles": "npm run build-prod && npm run package-es5 && npm run package-es2015",
+    "serve": "http-server dist/elements-demo --gzip -c-1",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -33,9 +36,9 @@
     "@angular/cli": "~8.0.3",
     "@angular/compiler-cli": "~8.0.1",
     "@angular/language-service": "~8.0.1",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
