--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~8.1.2",
     "document-register-element": "^1.7.2",
     "ngx-build-plus": "^8.1.1",
+    "ngx-logger": "^4.0.3",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
