[Elegant Theme] - ADDED: - angular material; - material style; - photo gallery dialog component; - styles.scss; DISABLED: -ivy (temporary);

--- a/angular.json
+++ b/angular.json
@@ -110,6 +110,11 @@
     },
     "elegantTheme": {
       "projectType": "library",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "projects/elegant-theme",
       "sourceRoot": "projects/elegant-theme/src",
       "prefix": "wc",
