--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "watch": "ng build $WC --single-bundle --sourceMap=true --watch",
     "build-prod": "ng build $WC --prod --single-bundle --output-hashing=none",
-    "package-es5": "cat dist/$WC/{scripts,main-es5}.js | gzip > $WC-es5.js.gz",
-    "package-es2015": "cat dist/$WC/{scripts,main-es2015}.js | gzip > $WC-es2015.js.gz",
-    "create-bundles": "npm run build-prod && npm run package-es5 && npm run package-es2015",
+    "package-es5": "cat dist/$WC/{scripts,main-es5}.js | gzip > dist/$WC-es5.js.gz",
+    "package-es2015": "cat dist/$WC/{scripts,main-es2015}.js | gzip > dist/$WC-es2015.js.gz",
+    "delete-folder": "rm -r dist/$WC",
+    "-------------------": "-----------------------------------------------------------------------------------------",
+    "watch": "ng build $WC --single-bundle --sourceMap=true --watch",
+    "create-bundles": "npm run build-prod && npm run package-es5 && npm run package-es2015 && npm run delete-folder",
     "serve": "http-server dist/$WC --gzip -c-1",
     "test": "ng test",
     "lint": "ng lint",
@@ -16,16 +18,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
+    "@angular/animations": "^8.1.2",
+    "@angular/cdk": "^8.1.1",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/elements": "^8.0.3",
     "@angular/forms": "~8.1.2",
+    "@angular/material": "^8.1.1",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "document-register-element": "^1.7.2",
+    "material-design-icons": "^3.0.1",
     "ngx-build-plus": "^8.1.1",
     "ngx-logger": "^4.0.3",
     "rxjs": "~6.5.2",
