--- a/projects/elegant-theme/tsconfig.lib.json
+++ b/projects/elegant-theme/tsconfig.lib.json
@@ -11,6 +11,15 @@
       "es2018"
     ]
   },
+  "angularCompilerOptions": {
+    "annotateForClosureCompiler": true,
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": true,
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "enableResourceInlining": true,
+    "enableIvy": true
+  },
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts"
