--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build-prod": "ng build $WC --prod --single-bundle --output-hashing=none",
-    "package-es5": "cat dist/$WC/scripts.js dist/$WC/main-es5.js | gzip > dist/$WC-es5.js.gz",
-    "package-es2015": "cat dist/$WC/scripts.js dist/$WC/main-es2015.js | gzip > dist/$WC-es2015.js.gz",
+    "package-es5": "cat dist/$WC/main-es5.js | gzip > dist/$WC-es5.js.gz",
+    "package-es2015": "cat dist/$WC/main-es2015.js | gzip > dist/$WC-es2015.js.gz",
     "delete-folder": "rm -r dist/$WC",
     "-------------------": "-----------------------------------------------------------------------------------------",
     "watch": "ng build $WC --single-bundle --sourceMap=true --watch",
@@ -33,7 +33,6 @@
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
-    "document-register-element": "^1.7.2",
     "ngx-build-plus": "^8.1.1",
     "ngx-logger": "^4.0.3",
     "rxjs": "~6.5.2",
