[Project] - ADDED: script for compress the build

--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
     "ng": "ng",
     "start": "ng serve",
     "build-prod": "ng build $WC --prod --single-bundle --output-hashing=none",
-    "package-es5": "cat dist/$WC/main-es5.js | gzip > dist/$WC-es5.js.gz",
-    "package-es2015": "cat dist/$WC/main-es2015.js | gzip > dist/$WC-es2015.js.gz",
+    "package-es5": "cat dist/$WC/main-es5.js > dist/$WC-es5.js",
+    "package-es2015": "cat dist/$WC/main-es2015.js > dist/$WC-es2015.js",
+    "package-es5-compressed": "cat dist/$WC/main-es5.js | gzip > dist/$WC-es5.js.gz",
+    "package-es2015-compressed": "cat dist/$WC/main-es2015.js | gzip > dist/$WC-es2015.js.gz",
     "delete-folder": "rm -r dist/$WC",
-    "-------------------": "-----------------------------------------------------------------------------------------",
+    "---------------------------------------------------BASE-SCRIPTS---------------------------------------------------": "",
     "watch": "ng build $WC --single-bundle --sourceMap=true --watch",
     "create-bundles": "npm run build-prod && npm run package-es5 && npm run package-es2015 && npm run delete-folder",
+    "create-bundles-compressed": "npm run build-prod && npm run package-es5-compressed && npm run package-es2015-compressed && npm run delete-folder",
     "serve": "http-server dist/$WC --gzip -c-1",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "--------------------": "----------------------------------------------------------------------------------------",
+    "---------------------------------------------------ELEGANT-THEME-SCRIPTS---------------------------------------------------": "",
     "watch-elegant-theme": "WC=elegantTheme npm run watch & WC=elegantTheme npm run serve",
     "serve-elegant-theme": "WC=elegantTheme npm run serve",
-    "create-bundle-elegant-theme": "WC=elegantTheme npm run create-bundles"
+    "create-bundle-elegant-theme": "WC=elegantTheme npm run create-bundles",
+    "create-bundle-elegant-theme-compressed": "WC=elegantTheme npm run create-bundles"
   },
   "private": true,
   "dependencies": {
