--- a/package.json
+++ b/package.json
@@ -31,28 +31,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/elements": "^8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "ngx-build-plus": "^9.0.2",
+    "@angular/animations": "^9.0.0-next.8",
+    "@angular/cdk": "^8.1.1",
+    "@angular/common": "~9.0.0-next.8",
+    "@angular/compiler": "~9.0.0-next.8",
+    "@angular/core": "~9.0.0-next.8",
+    "@angular/elements": "^9.0.0-next.8",
+    "@angular/forms": "~9.0.0-next.8",
+    "@angular/material": "^8.1.1",
+    "@angular/platform-browser": "~9.0.0-next.8",
+    "@angular/platform-browser-dynamic": "~9.0.0-next.8",
+    "@angular/router": "~9.0.0-next.8",
+    "ngx-build-plus": "^8.1.4",
     "ngx-logger": "^4.0.3",
-    "rxjs": "~6.5.4",
+    "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.22",
-    "@angular/cli": "~8.3.22",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.803.6",
+    "@angular/cli": "~8.0.3",
+    "@angular/compiler-cli": "~9.0.0-next.8",
+    "@angular/language-service": "~9.0.0-next.8",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
