--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-next.14",
+    "@angular/animations": "^9.0.0-rc.5",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "~9.0.0-next.14",
-    "@angular/compiler": "~9.0.0-next.14",
-    "@angular/core": "~9.0.0-next.14",
-    "@angular/elements": "^9.0.0-next.14",
-    "@angular/forms": "~9.0.0-next.14",
+    "@angular/common": "~9.0.0-rc.5",
+    "@angular/compiler": "~9.0.0-rc.5",
+    "@angular/core": "^9.0.0-rc.5",
+    "@angular/elements": "^9.0.0-rc.5",
+    "@angular/forms": "~9.0.0-rc.5",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~9.0.0-next.14",
-    "@angular/platform-browser-dynamic": "~9.0.0-next.14",
-    "@angular/router": "~9.0.0-next.14",
-    "ngx-build-plus": "^8.1.5",
+    "@angular/platform-browser": "~9.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
+    "@angular/router": "~9.0.0-rc.5",
+    "ngx-build-plus": "^9.0.2",
     "ngx-logger": "^4.0.3",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
@@ -50,9 +50,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.14",
-    "@angular/cli": "~8.3.14",
-    "@angular/compiler-cli": "~9.0.0-next.14",
-    "@angular/language-service": "~9.0.0-next.14",
+    "@angular/cli": "^8.3.20",
+    "@angular/compiler-cli": "^9.0.0-rc.5",
+    "@angular/language-service": "~9.0.0-rc.5",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -67,6 +67,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "^3.6.4"
+    "typescript": "3.6.4"
   }
 }
