[project] - updated angular to version 9.rc11, updated material ro 9.rc8

--- a/angular.json
+++ b/angular.json
@@ -261,5 +261,8 @@
       }
     }
   },
-  "defaultProject": "web-components-demo"
+  "defaultProject": "web-components-demo",
+  "cli": {
+    "analytics": false
+  }
 }
