--- a/package.json
+++ b/package.json
@@ -31,32 +31,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.5",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~9.0.0-rc.5",
-    "@angular/compiler": "~9.0.0-rc.5",
-    "@angular/core": "^9.0.0-rc.5",
-    "@angular/elements": "^9.0.0-rc.5",
-    "@angular/forms": "~9.0.0-rc.5",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~9.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
-    "@angular/router": "~9.0.0-rc.5",
+    "@angular/animations": "^9.0.0-rc.11",
+    "@angular/cdk": "^9.0.0-rc.8",
+    "@angular/common": "~9.0.0-rc.11",
+    "@angular/compiler": "~9.0.0-rc.11",
+    "@angular/core": "^9.0.0-rc.11",
+    "@angular/elements": "^9.0.0-rc.11",
+    "@angular/forms": "~9.0.0-rc.11",
+    "@angular/material": "^9.0.0-rc.8",
+    "@angular/platform-browser": "~9.0.0-rc.11",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.11",
+    "@angular/router": "~9.0.0-rc.11",
     "ngx-build-plus": "^9.0.2",
     "ngx-logger": "^4.0.3",
     "rxjs": "~6.5.3",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.14",
-    "@angular/cli": "^8.3.20",
-    "@angular/compiler-cli": "^9.0.0-rc.5",
-    "@angular/language-service": "~9.0.0-rc.5",
+    "@angular-devkit/build-angular": "~0.900.0-rc.10",
+    "@angular/cli": "^9.0.0-rc.10",
+    "@angular/compiler-cli": "^9.0.0-rc.11",
+    "@angular/language-service": "~9.0.0-rc.11",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
