[components] - added fallback images retrieved by main project

--- a/angular.json
+++ b/angular.json
@@ -123,7 +123,7 @@
             "outputPath": "dist/elegantTheme",
             "index": "projects/elegant-theme/src/index.html",
             "aot": false,
-            "assets": [],
+            "assets": ["projects/elegant-theme/src/assets"],
             "styles": [],
             "scripts": []
           },
