--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.11",
-    "@angular/cdk": "^9.0.0-rc.8",
-    "@angular/common": "~9.0.0-rc.11",
-    "@angular/compiler": "~9.0.0-rc.11",
-    "@angular/core": "^9.0.0-rc.11",
-    "@angular/elements": "^9.0.0-rc.11",
-    "@angular/forms": "~9.0.0-rc.11",
-    "@angular/material": "^9.0.0-rc.8",
-    "@angular/platform-browser": "~9.0.0-rc.11",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.11",
-    "@angular/router": "~9.0.0-rc.11",
+    "@angular/animations": "^9.0.0",
+    "@angular/cdk": "^9.0.0",
+    "@angular/common": "~9.0.0",
+    "@angular/compiler": "~9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/elements": "^9.0.0",
+    "@angular/forms": "~9.0.0",
+    "@angular/material": "^9.0.0",
+    "@angular/platform-browser": "~9.0.0",
+    "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/router": "~9.0.0",
     "ngx-build-plus": "^9.0.2",
     "ngx-logger": "^4.0.3",
     "rxjs": "~6.5.3",
@@ -49,10 +49,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.10",
-    "@angular/cli": "^9.0.0-rc.10",
-    "@angular/compiler-cli": "^9.0.0-rc.11",
-    "@angular/language-service": "~9.0.0-rc.11",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular/cli": "^9.0.1",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "~9.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
